--- a/boilerplate/src/index.html
+++ b/boilerplate/src/index.html
@@ -6,5 +6,8 @@
   </head>
   <body style="margin: 0;padding:0;">
     <div id="screen"></div>
+    <div id="footer">
+      <div id="screenreader">Meep</div>
+    </div>
   </body>
 </html>
