--- a/boilerplate/src/index.html
+++ b/boilerplate/src/index.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8"/>
     <title>Artworld</title>
   </head>
-  <body style="margin: 0;padding:0;">
-    <div id="screen"></div>
-    <div id="footer">
-      <div id="screenreader">Meep</div>
+  <body>
+    <div class="main">
+      <div id="screen"></div>
+      <div id="footer">
+        <div id="screenreader">Texts will be displayed here</div>
+      </div>
     </div>
   </body>
 </html>
