make art get image descriptions & further info

--- a/boilerplate/src/index.html
+++ b/boilerplate/src/index.html
@@ -8,8 +8,12 @@
     <div class="main">
       <div id="screen"></div>
       <div id="footer">
-        <div id="screenreader">Texts will be displayed here</div>
-      </div>
+        <h3 id="title"></h3>
+        <div id="description"></div>
+        <div id="link"></div>
+        <div id="author"></div>
+        <div id="licence"></div>
+       </div>
     </div>
   </body>
 </html>
