move sidebar to the right

--- a/boilerplate/src/index.html
+++ b/boilerplate/src/index.html
@@ -6,14 +6,23 @@
   </head>
   <body>
     <div class="main">
-      <div id="screen"></div>
-      <div id="footer">
-        <h3 id="title"></h3>
-        <div id="description"></div>
-        <div id="link"></div>
-        <div id="author"></div>
-        <div id="licence"></div>
-       </div>
+      <div class="screen" id="screen"></div>
+      <div class="sidebar">
+        <article class="card">
+         <div id="author"></div>
+         <header><h3 id="title"></h3></header>
+         <span>
+          <span id="surface"></span>
+          <span id="size"></span>
+         </span>
+         <div id="link"></div>
+         <div id="description"></div>
+         <footer>
+          <div id="licence"></div>
+         </footer>
+        </article>
+
+      </div>
     </div>
   </body>
 </html>
