migrate artwork texts to a fluent attributes

--- a/boilerplate/src/index.html
+++ b/boilerplate/src/index.html
@@ -18,7 +18,7 @@
          <div id="link"></div>
          <div id="description"></div>
          <footer>
-          <div id="licence"></div>
+          <div id="license"></div>
          </footer>
         </article>
 
