add option to add a footer to the template

--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,10 @@
           <div id="license"></div>
          </footer>
         </article>
-
       </div>
+    </div>
+    <div class="footer">
+      <%= htmlWebpackPlugin.options.footer %>
     </div>
   </body>
 </html>
