refactor keys, add title screen (WIP)

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,16 @@
   </head>
   <body>
     <div class="main">
-      <div class="screen" id="screen"></div>
+      <div class="screen" id="screen">
+        <div id="menu-overlay">
+          <div id="menu">
+            <h1>Artworld.city</h1>
+            <label for="name">Nick Name</label>
+            <input type="text" name="name" placeholder="Nickname"/>
+            <button id="start">Start</button>
+          </div>
+        </div>
+      </div>
       <div class="sidebar">
         <article class="card">
          <div id="author"></div>
