--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
           <div id="menu">
             <h1>Artworld.city</h1>
             <label for="name">Nick Name</label>
-            <input type="text" name="name" placeholder="Nickname"/>
+            <input type="text" id="name" name="name" placeholder="Nickname" maxlength=32/>
             <button id="start">Start</button>
           </div>
         </div>
