add local storage for nickname

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,12 @@
             <h1>Artworld.city</h1>
             <label for="name">Nick Name</label>
             <input type="text" id="name" name="name" placeholder="Nickname" maxlength=32/>
+            <span>
+              <label for="savesettings">Remember me on this computer</label>
+              <input type="checkbox" name="savesettings" id="savesettings" />
+              <br/>
+              <small>Uncheck to clear local storage.</small>
+            </span>
             <button id="start">Start</button>
           </div>
         </div>
